syntax = "proto3";

package persistence.provider.v1;
option go_package = "github.com/ccamel/playground-protoactor.go/internal/persistence/provider";

message SomethingHappened {
  string message = 1;
}

message SomethingElseHappened {
  uint64 value = 1;
}
